--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,13 +2,14 @@ spring.application.name=api-gateway
 server.port=9090
 spring.main.web-application-type=reactive
 
+# Register with Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# Configuracion de Spring Cloud Gateway
-spring.cloud.gateway.routes[0].id=mi-microservicio
-spring.cloud.gateway.routes[0].uri=http://localhost:8080
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/**
+# Spring Cloud Gateway Routes
+spring.cloud.gateway.routes[0].id=confiteria-service
+spring.cloud.gateway.routes[0].uri=lb://CONFITERIA-SERVICES
+spring.cloud.gateway.routes[0].predicates[0]=Path=/rest-confiteria/**
 
-# Configuracion de Spring Cloud Gateway
-spring.cloud.gateway.routes[1].id=mi-vacantes
-spring.cloud.gateway.routes[1].uri=http://localhost:8070
-spring.cloud.gateway.routes[1].predicates[0]=Path=/categorias/**
+spring.cloud.gateway.routes[1].id=movies-service
+spring.cloud.gateway.routes[1].uri=lb://MOVIES-SERVICES
+spring.cloud.gateway.routes[1].predicates[0]=Path=/restMovie/**
