--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=config-server
+
+# Config Server runs on port 8888
+server.port=8888
+
+# Git repository for configurations
+spring.cloud.config.server.git.uri=https://github.com/Esclender/config-repo.git
+
+# Clone the repo at startup
+spring.cloud.config.server.git.clone-on-start=true
