--- a/confiteria-services/pom.xml
+++ b/confiteria-services/pom.xml
@@ -57,8 +57,13 @@
 			<version>3.1.5</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-config</artifactId>
+    </dependency>
+		<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-starter-bootstrap</artifactId>
+				<version>4.2.0</version>
 		</dependency>
 	</dependencies>
 		<dependencyManagement>
