--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=api-gateway
-server.port=9090
-spring.main.web-application-type=reactive
+# server.port=9090
+# spring.main.web-application-type=reactive
 
-# Register with Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# # Register with Eureka
+# eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# Spring Cloud Gateway Routes
-spring.cloud.gateway.routes[0].id=confiteria-service
-spring.cloud.gateway.routes[0].uri=lb://CONFITERIA-SERVICES
-spring.cloud.gateway.routes[0].predicates[0]=Path=/rest-confiteria/**
+# # Spring Cloud Gateway Routes
+# spring.cloud.gateway.routes[0].id=confiteria-service
+# spring.cloud.gateway.routes[0].uri=lb://CONFITERIA-SERVICES
+# spring.cloud.gateway.routes[0].predicates[0]=Path=/rest-confiteria/**
 
-spring.cloud.gateway.routes[1].id=movies-service
-spring.cloud.gateway.routes[1].uri=lb://MOVIES-SERVICES
-spring.cloud.gateway.routes[1].predicates[0]=Path=/restMovie/**
+# spring.cloud.gateway.routes[1].id=movies-service
+# spring.cloud.gateway.routes[1].uri=lb://MOVIES-SERVICES
+# spring.cloud.gateway.routes[1].predicates[0]=Path=/restMovie/**
