--- a/confiteria-services/pom.xml
+++ b/confiteria-services/pom.xml
@@ -57,9 +57,10 @@
 			<version>3.1.5</version>
 		</dependency>
 		<dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-config-client</artifactId>
+				<version>4.2.0</version>
+		</dependency>
 		<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-bootstrap</artifactId>
