--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,13 @@ services:
     image: mysql:8.0
     container_name: mysql-db
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_PASSWORD: Enero20.
       MYSQL_DATABASE: autoflixx
-      MYSQL_USER: user
-      MYSQL_PASSWORD: userpassword
+    command: --bind-address = 0.0.0.0
     volumes:
       - mysql-data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - spring-cloud-network
 
@@ -54,8 +52,8 @@ services:
       - eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
       - spring.cloud.config.uri=http://config-server:8888
       - spring.datasource.url=jdbc:mysql://mysql-db:3306/autoflixx?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-      - spring.datasource.username=user
-      - spring.datasource.password=userpassword
+      - spring.datasource.username=root
+      - spring.datasource.password=Enero20.
     depends_on:
       - mysql-db
       - eureka-server
@@ -69,14 +67,15 @@ services:
       context: ./movies-services
     container_name: movies-service
     ports:
-      - "8080:8080"
+      - "8082:8082"
     environment:
       - eureka.client.service-url.defaultZone=http://eureka-server:8761/eureka
       - spring.cloud.config.uri=http://config-server:8888
       - spring.datasource.url=jdbc:mysql://mysql-db:3306/autoflixx?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-      - spring.datasource.username=user
-      - spring.datasource.password=userpassword
+      - spring.datasource.username=root
+      - spring.datasource.password=Enero20.
     depends_on:
+      - mysql-db
       - eureka-server
       - config-server
     networks:
